Fix the issue where date picker was clipped by form footer
The project version edit page had the date time picker clipped
by the form footer.

Fixes #36863

--- a/css/ace-mantis.css
+++ b/css/ace-mantis.css
@@ -391,6 +391,11 @@ i.datetimepicker {
     color: #333333;
 }
 
+/* Allow datetimepicker to overflow table-responsive containers */
+.table-responsive:has(.datetimepicker) {
+    overflow: visible;
+}
+
 .dropdown-menu .divider {
     margin: 2px 0;
 }
